--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ body{
     border: 1px solid black;
     background-color: grey;
     padding: 40px;
+    min-width: 450px;
 }
 
 .project-article{
