--- a/styles.css
+++ b/styles.css
@@ -1,120 +1,220 @@
 *{
-    box-sizing: border-box;
-    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-}
-body{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+
 }
 
-.container{
+html{
+    overflow-x: hidden;
+}
+
+.main-container{
     display: grid;
     height: 100vh;
     width: 100vw;
-    grid-template-columns: 300px 1fr 1fr 1fr;
+    grid-template-columns: 300px 1fr;
     grid-template-rows: 170px 1fr;
-    /* gap: 10px; */
 }
 
-.container > div {
-    border: 1px solid black;
-}
+/* NAV ---  NAV ---  NAV ---  NAV ---  NAV ---  NAV ---  NAV ---  NAV ---  NAV ---  NAV ---  */
 
-.header{
-    grid-column: 2 / 5;
+.nav{
     display: grid;
-    grid-template-columns: 7fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 2.5fr 1fr;
+    grid-template-rows: 1fr 2fr;
 }
-.greeting-user{
+
+.nav-search{
+    grid-column: 1 / 2;
     display: grid;
     grid-template-columns: 1fr 10fr;
+    margin: 20px;
+    align-items: center;
 }
-.user-icon{
-    grid-row: 1 / 3;
-}
-.username{
-    grid-column: 2 / 3;
-}
-.logo{
-    color: white;
-    font-size: 30px;
-    margin-bottom: 50px;
-    font-weight: bold
-}
-.sidebar{
-    grid-row: 1 / 5;
-    background-color: #10a1e4e1;
-    padding: 20px;
+    .nav-search > i{
+        display: flex;
+        justify-content: center;
+    }
+    .nav-search > input{
+        border-radius: 20px;
+        padding: 10px;
+        box-sizing: content-box;
+        background-color: #e8e8f5cc;
+    }
+
+
+.nav-user{
+    display: grid;
+    grid-template-columns: 1fr 1fr 3fr;
+    align-items: center;
+    justify-items: center;
 }
 
-.sidebar-ul > li{
-    list-style-type: none;
-    font-size: 20px;
-    font-weight: 500;
-    line-height:40px;
-    color: white;
+.nav-greet{
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 1.5fr;
 }
+    .nav-greet-icon{
+        grid-area: 1 / 1 / 3 / 2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+        .nav-greet-greet{
+            display: flex;
+            align-self: end;
+        }
+        
 
-.sidebar-2{
-    margin-top: 50px;
-}
-
-.content{
-    grid-column: 2 / 5;
+.nav-buttons{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    margin: 30px;
+    /* gap: 5px; */
+    align-items: center;
+    justify-items: center;
 }
+    .nav-buttons > button{
+        border-radius: 30px;
+        height: 45px;
+        width: 90px;
+        background-color: #10a1e4e1;
+        color: white;
+        font-weight: 900;
+        font-size: 15px;
+        border: none;
+        cursor: pointer;
+    }
+        .nav-buttons > button:hover{
+            background-color: #0a9bdf;
+        }
 
-.project-container{
-    grid-area: 1 / 1 / 3 / 3;
-    border: 1px solid black;
-    background-color: grey;
-    padding: 40px;
-    min-width: 450px;
+        .nav-buttons > button:active{
+            background-color: #10a1e4e1;
+        }
+        
+
+
+/* SIDEBAR ---  SIDEBAR ---  SIDEBAR ---  SIDEBAR ---  SIDEBAR ---  SIDEBAR ---  SIDEBAR ---  */
+
+.sidebar{
+    background-color: #10a1e4e1;
+    grid-row: 1 / 3;    
+    padding: 25px;
+    
+
 }
+    .sidebar-title{
+        font-size: 35px;
+        color: white;
+        font-weight: 900;
+    }
+        .sidebar-ul > li{
+            display: grid;
+            align-items: center;
+            grid-template-columns: 1fr 4fr;
+            /* gap: 20px; */
 
-.project-article{
+        }
+
+        .sidebar > ul{
+            list-style-type: none;
+            color: white;
+            padding: 30px;
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 40px;
+        }
+            .sidebar > ul a{
+                color: white;
+                text-decoration: none;
+        
+            }
+                .sidebar > ul a:hover{
+                    color: black;
+                }
+
+        
+
+/* CONTENT ---  CONTENT ---  CONTENT ---  CONTENT ---  CONTENT ---  CONTENT ---  CONTENT ---  */
+
+.content{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 200px));
-    gap: 20px;
+    grid-template-columns: 1fr 1fr 0.6fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 30px;
+    background-color: #e8e8f5cc;
+    /* box-sizing: border-box; */
 }
 
-.title{
-    grid-column: 1 / 3;
+.content-project{
+    grid-area: 1 / 1 / 3 / 3;
+    flex-direction: column;
 }
-.project-card{
-    border: 1px solid black;
-    border-radius: 20px;
-    height: 200px;
-    /* width: 300px; */
-}
+    .project-container{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        /* grid-template-columns: 1fr 1fr; */
+        grid-auto-flow: row;
+        gap: 20px;
+        padding: 20px;
+    }
+
+    .project-card{
+        height: 240px;
+        background-color: white;
+        border-radius: 15px;
+        border-left: 8px solid orange;
+        padding: 30px;
+    }
+        .project-card > h4{
+            font-weight: 600;
+        }
+            .project-card > p{
+                color: #2c2c2ccc;
+            }
+                .project-card-icons{
+                    display: flex;                    
+                    justify-content: end;
+                    margin-top: 20px;
+                    gap: 15px;
+                }
+
+
+
+/* .content-announcement{
+    
+} */
 
 .announcement-container{
-    background-color: beige;
-    display: grid;
+    /* border: 1px solid black; */
+    margin: 20px;
+    padding: 30px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px   ;
+    background-color: white;
+}
+    .announcement-container > div{
+        
+    }
+
+
+.trend-container{
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
     padding: 20px;
-    grid-template-rows: 50px 1fr 1fr 1fr;
-    gap: 20px;
-    border-radius: 20px;
-    margin: 40px;
+    margin: 20px;
+    /* border: 1px solid black; */
+    border-radius: 15px;
+    background-color: white;
 }
-.announcement{
-    border: 1px solid black;
-
-}
-
-.trending-container{
-    background-color: azure;
-    display: grid;
-    padding: 20px; 
-    grid-template-rows: 50px 1fr 1fr 1fr 1fr;
-    gap: 20px;
-    border-radius: 20px;
-    margin: 40px;
-}
-
-.trending-card{
-    border: 1px solid black;
-}   
+    .trend-user-div{
+        gap: 15px;
+        display: flex;
+    }
